2011-02-21 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSMenuView.m (-trackWithEvent:): Rewrite that uses mouse
	capture to ensure we get mouse events outside our windows.
	Patch by Christopher Armstrong <carmstrong@fastmail.com.au>

2011-02-20 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSWindow.m,
	* Source/NSControl.m,
	* ColorPickers/GSStandardColorPicker.m,
	* ColorPickers/GSWheelColorPicker.m,
	* Source/GSXibLoader.m: Fix memory leaks found by analyser.

2011-02-20 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Additions/GNUstepGUI/GSFusedSilica.h,
	* Source/GSFusedSilicaContext.h,
	* Source/GSFusedSilicaContext.m,
	* Source/GSFusedSilica.m: Remove these files as they are obsolete
	now. The Opal library is a more complete replacement for CoreGraphics.
	* Source/GNUmakefile,
	* Source/DocMakefile,
	* Source/NSFont.m: Remove references to GSFusedSilica.

2011-02-20 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSScreen.m,
	* Source/NSWindow.m,
	* Source/NSToolbar.m,
	* Source/NSScroller.m,
	* Source/NSTextView.m: Remove diract usage of isa.
	* Source/GSBindingHelpers.h: Replace #include with #import.

2011-02-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Tests/GNUmakefile: Run/clean tests
	* Tests/gui: Imported from testsuite

2011-02-15 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Additions/GNUstepGUI/GSDisplayServer.h,
	* Source/GSDisplayServer.m (-recolorcursor:::, -recolorcursor:::)
	(-setcursor:, -freecursor:): New backend methods replacing
	-setcursorcolor:::.
	* Source/NSCursor.m,
	* Source/GSDragView.m: Use new cursor methods.

2011-02-15 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSWindow.m (-setContentView:): Revert Wolfgangs change
	and add a different solution as explained in his mail.

2011-02-14  Wolfgang Lux  <wolfgang.lux@gmail.com>>

	* Source/NSApplication.m (-_initDefaults):
	* Source/NSWindow.m (-_initDefaults):
	Add user default to allow placing app icons and mini windows at
	normal window level. This is particularly convenient with some